--- a/Animetick/Views/ATTicketContentView.xib
+++ b/Animetick/Views/ATTicketContentView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -20,62 +20,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tc2-ye-61g" userLabel="text_info_container">
                     <rect key="frame" x="67" y="0.0" width="248" height="73"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="ふたりはミルキィホームズ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RB5-74-QhQ" userLabel="title">
-                            <rect key="frame" x="0.0" y="14" width="248" height="16"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="16" id="NEf-OE-rHM"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="#4 まけないきもち " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJi-tY-P50" userLabel="subTitle">
-                            <rect key="frame" x="0.0" y="28" width="248" height="20"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="LOH-L7-IxI"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Channel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VM9-hP-cAt" userLabel="channel">
-                            <rect key="frame" x="0.0" y="43" width="46" height="20"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="x3M-kY-XfA"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="01/01 23:30〜" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6T-sI-af0" userLabel="startAt">
-                            <rect key="frame" x="51" y="43" width="197" height="20"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="N96-Od-VEk"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="B6T-sI-af0" firstAttribute="top" secondItem="Tc2-ye-61g" secondAttribute="top" constant="43" id="A75-Ly-4xT"/>
-                        <constraint firstAttribute="trailing" secondItem="B6T-sI-af0" secondAttribute="trailing" id="DAh-9g-ff8"/>
-                        <constraint firstAttribute="trailing" secondItem="RB5-74-QhQ" secondAttribute="trailing" id="J0U-5E-NoP"/>
-                        <constraint firstItem="RB5-74-QhQ" firstAttribute="leading" secondItem="Tc2-ye-61g" secondAttribute="leading" id="N9b-tU-IFi"/>
-                        <constraint firstItem="B6T-sI-af0" firstAttribute="leading" secondItem="VM9-hP-cAt" secondAttribute="trailing" constant="5" id="NjP-dY-Zra"/>
-                        <constraint firstItem="cJi-tY-P50" firstAttribute="top" secondItem="Tc2-ye-61g" secondAttribute="top" constant="28" id="PNR-SF-r7a"/>
-                        <constraint firstAttribute="trailing" secondItem="B6T-sI-af0" secondAttribute="trailing" id="Sqf-kV-xUJ"/>
-                        <constraint firstAttribute="trailing" secondItem="cJi-tY-P50" secondAttribute="trailing" id="jRu-rJ-HiB"/>
-                        <constraint firstItem="RB5-74-QhQ" firstAttribute="top" secondItem="Tc2-ye-61g" secondAttribute="top" constant="14" id="l9F-lZ-jDh"/>
-                        <constraint firstItem="VM9-hP-cAt" firstAttribute="top" secondItem="Tc2-ye-61g" secondAttribute="top" constant="43" id="ler-NS-0Dr"/>
-                        <constraint firstItem="VM9-hP-cAt" firstAttribute="leading" secondItem="Tc2-ye-61g" secondAttribute="leading" id="ohn-TU-TCr"/>
-                        <constraint firstItem="cJi-tY-P50" firstAttribute="leading" secondItem="Tc2-ye-61g" secondAttribute="leading" id="rbs-5L-Bsp"/>
-                    </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H9S-Hl-sZw" userLabel="icon">
                     <rect key="frame" x="10" y="12" width="50" height="50"/>
@@ -99,12 +43,8 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="channel" destination="VM9-hP-cAt" id="QuW-B0-8gn"/>
                 <outlet property="icon" destination="H9S-Hl-sZw" id="ABU-tj-e33"/>
                 <outlet property="nearDateLabel" destination="03U-vq-oB7" id="8Qj-Fa-PJc"/>
-                <outlet property="startAt" destination="B6T-sI-af0" id="XGE-DF-I38"/>
-                <outlet property="subTitle" destination="cJi-tY-P50" id="KjL-xQ-5vC"/>
-                <outlet property="title" destination="RB5-74-QhQ" id="tMI-mZ-LeV"/>
             </connections>
         </view>
     </objects>
